--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,113 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentStart="true">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="save"
+                android:id="@+id/saveButton"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:onClick="save"
+                style="@style/ButtonTheme" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="load"
+                android:id="@+id/loadButton"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:onClick="load"
+                style="@style/ButtonTheme" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="clear"
+                android:id="@+id/clearButton"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:onClick="clear"
+                style="@style/ButtonTheme"
+                android:nestedScrollingEnabled="false" />
+
+        </LinearLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="2"
+            android:rowCount="3">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="awsAccessKeyId"
+                android:id="@+id/AccessKeyIdTextView"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="center" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/awsAccessKeyEditText"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:text="awsAccessKeyId"
+                android:layout_gravity="center|fill_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="awsSecretKey"
+                android:id="@+id/SecretKeyTextView"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_gravity="center" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/awsSecretKeyEditText"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:text="awsSecretKey"
+                android:elegantTextHeight="false"
+                android:layout_gravity="center|fill_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/associateTagView"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_gravity="center"
+                android:text="AssociateTag" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/associateTagEditText"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:text="AssociateTag"
+                android:elegantTextHeight="false"
+                android:layout_gravity="center|fill_horizontal" />
+        </GridLayout>
+
+    </LinearLayout>
 </RelativeLayout>
