--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Amazon authorization"
-            android:id="@+id/authButton"
-            style="@style/ButtonTheme" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="get book data"
+            android:text="読書なう"
             android:id="@+id/textView" />
 
         <LinearLayout
@@ -53,6 +46,125 @@
             android:id="@+id/barcodeButton"
             style="@style/ButtonTheme"
             android:onClick="getBarcode" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageView"
+                    android:layout_weight="1"
+                    android:layout_column="0"
+                    android:layout_columnSpan="3"
+                    android:layout_row="0"
+                    android:layout_rowSpan="3" />
+
+                <GridLayout
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:columnCount="4"
+                    android:id="@+id/grid"
+                    android:rowCount="3"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="date"
+                        android:id="@+id/textView2"
+                        android:layout_row="0"
+                        android:layout_column="0" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/dateEditText"
+                        android:layout_row="0"
+                        android:layout_column="1"
+                        android:layout_columnSpan="3" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="title"
+                        android:id="@+id/textView3"
+                        android:layout_row="1"
+                        android:layout_column="0" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/titleEditText"
+                        android:layout_row="1"
+                        android:layout_column="1"
+                        android:layout_columnSpan="3" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="author"
+                        android:id="@+id/textView4"
+                        android:layout_row="2"
+                        android:layout_column="0" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/authorEditText"
+                        android:layout_row="2"
+                        android:layout_column="1"
+                        android:layout_columnSpan="3" />
+
+                </GridLayout>
+            </LinearLayout>
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:rowCount="3"
+                android:columnCount="8">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="comment"
+                    android:id="@+id/textView5"
+                    android:layout_row="0"
+                    android:layout_column="0" />
+
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:id="@+id/commentEditText"
+                    android:layout_row="0"
+                    android:layout_column="1"
+                    android:layout_columnSpan="7"
+                    android:layout_rowSpan="3" />
+            </GridLayout>
+        </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="Amazon authorization"
+            android:id="@+id/authButton"
+            style="@style/ButtonTheme"
+            android:onClick="openAuthActivity"
+            android:layout_alignParentBottom="true"
+            android:layout_weight="3" />
 
     </LinearLayout>
 </FrameLayout>
