--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -49,6 +49,13 @@
 
         </LinearLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Amazon"
+            android:id="@+id/textView6" />
+
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,7 +78,6 @@
                 android:id="@+id/awsAccessKeyEditText"
                 android:layout_row="0"
                 android:layout_column="1"
-                android:text="awsAccessKeyId"
                 android:layout_gravity="center|fill_horizontal" />
 
             <TextView
@@ -89,7 +95,6 @@
                 android:id="@+id/awsSecretKeyEditText"
                 android:layout_row="1"
                 android:layout_column="1"
-                android:text="awsSecretKey"
                 android:elegantTextHeight="false"
                 android:layout_gravity="center|fill_horizontal" />
 
@@ -108,10 +113,98 @@
                 android:id="@+id/associateTagEditText"
                 android:layout_row="2"
                 android:layout_column="1"
-                android:text="AssociateTag"
                 android:elegantTextHeight="false"
                 android:layout_gravity="center|fill_horizontal" />
         </GridLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Twitter"
+            android:id="@+id/textView7" />
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="2"
+            android:rowCount="4"
+            android:id="@+id/grid2">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AccessToken"
+                android:id="@+id/textView8"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="center" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/accessTokenEditText"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_gravity="center|fill_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AccessTokenSecret"
+                android:id="@+id/textView9"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_gravity="center" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/accessTokenSecretEditText"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:elegantTextHeight="false"
+                android:layout_gravity="center|fill_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_gravity="center"
+                android:text="ConsummerKey" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/consumerKeyEditText"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:elegantTextHeight="false"
+                android:layout_gravity="center|fill_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView11"
+                android:layout_row="3"
+                android:layout_column="0"
+                android:layout_gravity="center"
+                android:text="ConsummerKeySecret" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/consumerKeySecretEditText"
+                android:layout_row="3"
+                android:layout_column="1"
+                android:elegantTextHeight="false"
+                android:layout_gravity="center|fill_horizontal" />
+
+        </GridLayout>
+
     </LinearLayout>
+
 </RelativeLayout>
