--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,13 +61,14 @@
 
                 <ImageView
                     android:layout_width="0dip"
-                    android:layout_height="wrap_content"
+                    android:layout_height="fill_parent"
                     android:id="@+id/imageView"
                     android:layout_weight="1"
                     android:layout_column="0"
                     android:layout_columnSpan="3"
                     android:layout_row="0"
-                    android:layout_rowSpan="3" />
+                    android:layout_rowSpan="3"
+                    android:onClick="getImageFromCamera" />
 
                 <GridLayout
                     android:layout_width="0dip"
@@ -159,12 +160,22 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:text="Amazon authorization"
+            android:text="tweet"
+            android:id="@+id/tweetButton"
+            android:layout_gravity="center_horizontal"
+            style="@style/ButtonTheme"
+            android:layout_weight="2"
+            android:onClick="tweet" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="authorization"
             android:id="@+id/authButton"
             style="@style/ButtonTheme"
             android:onClick="openAuthActivity"
             android:layout_alignParentBottom="true"
-            android:layout_weight="3" />
+            android:layout_weight="2" />
 
     </LinearLayout>
 </FrameLayout>
