--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -78,7 +78,7 @@
                 android:id="@+id/awsAccessKeyEditText"
                 android:layout_row="0"
                 android:layout_column="1"
-                android:layout_gravity="center|fill_horizontal" />
+                android:layout_gravity="fill_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
                 android:layout_row="1"
                 android:layout_column="1"
                 android:elegantTextHeight="false"
-                android:layout_gravity="center|fill_horizontal" />
+                android:layout_gravity="fill_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -114,7 +114,7 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 android:elegantTextHeight="false"
-                android:layout_gravity="center|fill_horizontal" />
+                android:layout_gravity="fill_horizontal" />
         </GridLayout>
 
         <TextView
@@ -147,7 +147,7 @@
                 android:id="@+id/accessTokenEditText"
                 android:layout_row="0"
                 android:layout_column="1"
-                android:layout_gravity="center|fill_horizontal" />
+                android:layout_gravity="fill_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -165,7 +165,7 @@
                 android:layout_row="1"
                 android:layout_column="1"
                 android:elegantTextHeight="false"
-                android:layout_gravity="center|fill_horizontal" />
+                android:layout_gravity="fill_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -183,7 +183,7 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 android:elegantTextHeight="false"
-                android:layout_gravity="center|fill_horizontal" />
+                android:layout_gravity="fill_horizontal" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -201,7 +201,7 @@
                 android:layout_row="3"
                 android:layout_column="1"
                 android:elegantTextHeight="false"
-                android:layout_gravity="center|fill_horizontal" />
+                android:layout_gravity="fill_horizontal" />
 
         </GridLayout>
 
