--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,8 +50,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_height="0dip"
+            android:layout_weight="4">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -75,7 +75,7 @@
                     android:layout_height="match_parent"
                     android:columnCount="4"
                     android:id="@+id/grid"
-                    android:rowCount="3"
+                    android:rowCount="4"
                     android:layout_weight="1">
 
                     <TextView
@@ -87,12 +87,13 @@
                         android:layout_column="0" />
 
                     <EditText
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/dateEditText"
                         android:layout_row="0"
                         android:layout_column="1"
-                        android:layout_columnSpan="3" />
+                        android:layout_columnSpan="3"
+                        android:layout_gravity="fill_horizontal" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -103,12 +104,13 @@
                         android:layout_column="0" />
 
                     <EditText
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/titleEditText"
                         android:layout_row="1"
                         android:layout_column="1"
-                        android:layout_columnSpan="3" />
+                        android:layout_columnSpan="3"
+                        android:layout_gravity="fill_horizontal" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -119,63 +121,73 @@
                         android:layout_column="0" />
 
                     <EditText
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/authorEditText"
                         android:layout_row="2"
                         android:layout_column="1"
-                        android:layout_columnSpan="3" />
+                        android:layout_columnSpan="3"
+                        android:layout_gravity="fill_horizontal" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_row="3"
+                        android:layout_column="0"
+                        android:layout_columnSpan="1"
+                        android:layout_gravity="fill" />
 
                 </GridLayout>
             </LinearLayout>
 
-            <GridLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1"
-                android:rowCount="3"
-                android:columnCount="8">
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="comment"
-                    android:id="@+id/textView5"
-                    android:layout_row="0"
-                    android:layout_column="0" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="4">
 
-                <EditText
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textMultiLine"
-                    android:ems="10"
-                    android:id="@+id/commentEditText"
-                    android:layout_row="0"
-                    android:layout_column="1"
-                    android:layout_columnSpan="7"
-                    android:layout_rowSpan="3" />
-            </GridLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="comment"
+                android:id="@+id/textView5"
+                android:layout_row="0"
+                android:layout_column="0" />
+
+            <EditText
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/commentEditText"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_columnSpan="7"
+                android:layout_rowSpan="3"
+                android:layout_weight="1" />
         </LinearLayout>
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="0dip"
             android:text="tweet"
             android:id="@+id/tweetButton"
             android:layout_gravity="center_horizontal"
             style="@style/ButtonTheme"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:onClick="tweet" />
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="0dip"
             android:text="authorization"
             android:id="@+id/authButton"
             style="@style/ButtonTheme"
             android:onClick="openAuthActivity"
             android:layout_alignParentBottom="true"
-            android:layout_weight="2" />
+            android:layout_weight="1" />
 
     </LinearLayout>
 </FrameLayout>
