--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -3,12 +3,26 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.lethe_river.dokusyonow.ListActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal|top">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listView"
+            android:choiceMode="singleChoice"
+            style="@android:style/Theme"
+            android:clickable="true"
+            android:focusable="true"
+            android:drawSelectorOnTop="true"
+            android:fastScrollAlwaysVisible="false" />
+
+    </LinearLayout>
+
 </FrameLayout>
